Refactor logging and code deduplication in Shiki services